--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                   <i class="fa fa-user"></i>
                 </div>
                 <div class="down-content">
-                  <h4>John Doe</h4>
+                  <h4>Amit kumar</h4>
                   <p class="n-m"><em>"Lorem ipsum dolor sit amet, consectetur an adipisicing elit. Itaque, corporis nulla at quia quaerat."</em></p>
                 </div>
               </div>
@@ -293,7 +293,7 @@
                   <i class="fa fa-user"></i>
                 </div>
                 <div class="down-content">
-                  <h4>Jane Smith</h4>
+                  <h4>Anku kumar</h4>
                   <p class="n-m"><em>"Lorem ipsum dolor sit amet, consectetur an adipisicing elit. Itaque, corporis nulla at quia quaerat."</em></p>
                 </div>
               </div>
@@ -303,7 +303,7 @@
                   <i class="fa fa-user"></i>
                 </div>
                 <div class="down-content">
-                  <h4>Antony Davis</h4>
+                  <h4>Sonu kumar</h4>
                   <p class="n-m"><em>"Lorem ipsum dolor sit amet, consectetur an adipisicing elit. Itaque, corporis nulla at quia quaerat."</em></p>
                 </div>
               </div>
@@ -370,7 +370,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright © 2020 Company Name - Template by: <a href="https://www.phpjabbers.com/">Jobsearch.com</a></p>
+              <p>Copyright © 2020 Company Name - Template by: <a href="https://www.Amitkumar.com/">Amitkumar.com</a></p>
             </div>
           </div>
         </div>
